--- a/Terms_3.3.html
+++ b/Terms_3.3.html
@@ -81,7 +81,7 @@
       </div>
     </div>
 
-    <!-- ===== אנטי תיאודיציה ===== -->
+    <!-- ===== אנטי-תיאודיציה ===== -->
     <div class="vbt-acc">
       <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
       <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
@@ -90,7 +90,7 @@
         <span class="vbt-pm" aria-hidden="true"></span>
       </label>
       <div class="vbt-panel">
-        גישה פילוסופית השוללת את הניסיון להצדיק את הרוע והסבל בעולם מנקודת מבט תיאולוגית. לפי גישה זו, שהתחזקה במיוחד לאחר השואה, אין להצדיק את הסבל האנושי באמצעות הסברים תיאולוגיים, ויש לקבל את מציאות הרוע כאתגר אמוני ומוסרי. גישתו של הרב זקס היא אנטי תיאודציונית.
+        גישה פילוסופית השוללת את הניסיון להצדיק את הרוע והסבל בעולם מנקודת מבט תיאולוגית. לפי גישה זו, שהתחזקה במיוחד לאחר השואה, אין להצדיק את הסבל האנושי באמצעות הסברים תיאולוגיים, ויש לקבל את מציאות הרוע כאתגר אמוני ומוסרי. גישתו של הרב זקס היא אנטי-תיאודציונית.
       </div>
     </div>
 
