--- a/Terms_3.3.html
+++ b/Terms_3.3.html
@@ -86,7 +86,7 @@
       <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
       <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
         <span class="vbt-icon">i</span>
-        <span class="vbt-title">אנטי תיאודיציה</span>
+        <span class="vbt-title">אנטי-תיאודיציה</span>
         <span class="vbt-pm" aria-hidden="true"></span>
       </label>
       <div class="vbt-panel">
