--- a/Terms_4.6.html
+++ b/Terms_4.6.html
@@ -81,16 +81,16 @@
       </div>
     </div>
 
-    <!-- ===== ביקורת על מגבלות הנאורות ===== -->
+    <!-- ===== ביקורת על הנאורות ===== -->
     <div class="vbt-acc">
       <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
       <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
         <span class="vbt-icon">i</span>
-        <span class="vbt-title">ביקורת על מגבלות הנאורות</span>
+        <span class="vbt-title">ביקורת על הנאורות</span>
         <span class="vbt-pm" aria-hidden="true"></span>
       </label>
       <div class="vbt-panel">
-        ביקורת על מגבלות הנאורות – שניהם הדגישו כי למרות תרומתה, הנאורות לבדה אינה מבטיחה מוסריות ולכן יש צורך בעוגן ערכי-דתי.
+        ביקורת על הנאורות – שניהם הדגישו כי למרות תרומתה, הנאורות לבדה אינה מבטיחה מוסריות ולכן יש צורך בעוגן ערכי-דתי.
       </div>
     </div>
 
