--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>הרב זקס - חלון להגות יהודית</title>
+<title>מפת הקורס – Mind-Map (RTL)</title>
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -145,7 +145,7 @@
 
 <!-- === DATA (שימי כאן את העץ שלך) === -->
 <script id="mindmap-data" type="application/json">
-{ "dir":"rtl","flow":"rtl","root":{"label":"הרב זקס - חלון להגות יהודית","children":[
+{ "dir":"rtl","flow":"rtl","root":{"label":"מפת הקורס","children":[
   {"label":"0 - ברוכים הבאים","children":[
     {"label":"# הקדמה"},
     {"label":"1. למה הרב זקס, למה עכשיו? 2. מפת הקורס 3.סילבוס"},
