--- a/map.html
+++ b/map.html
@@ -7,23 +7,24 @@
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
-    /* ריווחים והתאמה */
+    /* ריווח מסביב למפה + מרחק מינימלי מהשורש לימין */
+    --edge-pad: 24px;
+    --root-gutter: 20px;
+
     --zoombar-gap: 60px;
     --map-pad-top: 35px;
     --map-pad-bottom: 48px;
-    --fit-margin: 28;              /* שוליים פנימיים ב-FIT מכל צד (פיקסלים) */
-    --root-gutter: 20px;           /* מרווח מינימום בין השורש לפס הגלילה (ימין) */
 
-    /* גיאומטריה של המפה */
+    /* גיאומטריה */
     --chip-h:48px;
     --gap-x:36px;
-    --gap-x-d01:100px;             /* רווח אופקי בין עומק 0 לעומק 1 */
-    --gap-rootcat:22px;            /* רווח אנכי בין ענפים בעומק 1 */
-    --gap-cat:22px;                /* עומק 2 */
-    --gap-d3:22px;                 /* עומק 3 */
-    --gap-d4:22px;                 /* עומק 4+ */
-    --gap-item:6px;                /* עלים */
-    --gap-between-groups:40px;     /* רווח נוסף בין ילדי השורש (מודולות) */
+    --gap-x-d01:100px;
+    --gap-rootcat:22px;
+    --gap-cat:22px;
+    --gap-d3:22px;
+    --gap-d4:22px;
+    --gap-item:6px;
+    --gap-between-groups:40px;
 
     /* עיצוב */
     --font:'Alef', system-ui, -apple-system, "Segoe UI", Arial, sans-serif;
@@ -66,29 +67,33 @@
   /* במה + מרכוז */
   .viewport{
     position:relative; width:100%;
-    overflow:hidden;                 /* ב-FIT אין גלילה; ב-FREE תופעל בגלגול */
     touch-action:none; cursor:grab;
-    scrollbar-gutter:stable;         /* לא מוסיף גטר כפול */
-    direction:ltr;                   /* נרמול scrollLeft */
-    padding-inline-end: var(--root-gutter); /* רווח קבוע לצד ימין */
+    scrollbar-gutter:stable;
+    direction:ltr;
+
+    /* ריווח קבוע מסביב למפה (גם ב-FIT וגם ב-FREE) */
+    padding-block: var(--edge-pad);
+    padding-inline-start: var(--edge-pad);
+    padding-inline-end: calc(var(--edge-pad) + var(--root-gutter));
   }
   .viewport.panning{ cursor:grabbing; }
+
   .scroller{
     position:relative;
-    display:flex; justify-content:center; align-items:flex-start; /* מרכז אופקי */
+    display:flex; justify-content:center; align-items:flex-start;  /* מרכז אופקי תמיד */
     padding: var(--map-pad-top) 0 var(--map-pad-bottom);
     min-width:100%;
   }
   .stage{
     position:relative;
     min-height:380px; min-width:0;
-    transform-origin: top center;    /* זום סביב המרכז האופקי */
+    transform-origin: top center;    /* זום סביב המרכז */
     opacity:0;
   }
   .chips{ position:absolute; inset:0; z-index:1; direction:rtl; }
   svg{ position:absolute; inset:0; width:100%; height:100%; overflow:visible; z-index:0 }
 
-  /* קפסולות – מניעת קיטוע/אליפסות + שמירה מפני כיווץ ע״י flex */
+  /* קפסולות – בלי חיתוך טקסט */
   .chip{
     position:absolute; display:inline-flex; align-items:center;
     height:var(--chip-h); padding:0 16px; border-radius:var(--r);
@@ -277,12 +282,12 @@
   const edgeLayer = document.getElementById('edges');
 
   /* ---------- Zoom state ---------- */
-  let mode = 'fit';                 // 'fit' = הכל נכנס למסך ללא גלילה, 'free' = זום חופשי + גלילה
+  let mode = 'fit';                 // 'fit' = נכנס למסך; 'free' = זום חופשי עם גלילה
   let scale = 1;
-  const SCALE_MIN_FREE = 0.05;      // במצב FREE בלבד
+  const SCALE_MIN_FREE = 0.05;
   const SCALE_MAX      = 3.0;
-  const ZOOM_STEP      = 1.10;      // זום חלק – 10% לכל לחיצה
-  let pendingCenterContent = false; // מרכוז כשעוברים מ-FIT ל-FREE
+  const ZOOM_STEP      = 1.10;
+  let centerNext = false;           // רמז לאפס אל המרכז אחרי שינוי זום/מצב
 
   /* ---------- CSS ---------- */
   const CSS = getComputedStyle(document.documentElement);
@@ -298,8 +303,6 @@
 
   const PAD_TOP    = +CSS.getPropertyValue('--map-pad-top').replace('px','')    || 0;
   const PAD_BOTTOM = +CSS.getPropertyValue('--map-pad-bottom').replace('px','') || 0;
-  const FIT_MARGIN = +CSS.getPropertyValue('--fit-margin').replace('px','')     || 24;
-  const ROOT_GUTTER= +CSS.getPropertyValue('--root-gutter').replace('px','')    || 20;
 
   const DEPTH_COLORS = {0:'#F8E8FF', 1:'#EBDCF8', 2:'#D4D2E6', 3:'#D7F6E4', 4:'#50E38A'};
 
@@ -343,7 +346,7 @@
   function measure(node){
     node.el.style.left = '-10000px';
     node.el.style.top  = '-10000px';
-    const w = Math.max(0, node.el.offsetWidth);  // רוחב הטקסט המלא
+    const w = Math.max(0, node.el.offsetWidth);
     node.width = node.naturalWidth = w;
     node.children.forEach(measure);
   }
@@ -400,6 +403,17 @@
 
   /* ---------- Layout ---------- */
   let contentH = 0, contentW = 0, offsetX = 0, stageW = 0;
+  let lastScaledW = 0, lastScaledH = 0;
+
+  function getViewportPads(){
+    const s = getComputedStyle(viewport);
+    return {
+      pL: parseFloat(s.paddingLeft)||0,
+      pR: parseFloat(s.paddingRight)||0,
+      pT: parseFloat(s.paddingTop)||0,
+      pB: parseFloat(s.paddingBottom)||0
+    };
+  }
 
   function layout(){
     measure(root);
@@ -407,7 +421,7 @@
 
     let vis=[]; collectVisible(root, vis);
 
-    /* עוגני עמודות לפי רוחב מקס' בכל עומק */
+    /* רוחב מקס' לכל עומק */
     const depthMaxW = new Map();
     vis.forEach(n=>{ depthMaxW.set(n.depth, Math.max(depthMaxW.get(n.depth)||0, n.width||140)); });
     DEPTH_ANCHORS = new Map(); DEPTH_ANCHORS.set(0, 0);
@@ -418,30 +432,32 @@
       DEPTH_ANCHORS.set(d, (FLOW==='rtl' ? -acc : acc));
     }
 
-    /* מיקום סופי + גבולות */
+    /* גבולות */
     subHeight(root); position(root, 0, 0);
     vis=[]; collectVisible(root, vis);
     const { w, h, minX } = bounds(vis);
     contentW = w; contentH = h;
 
-    /* התאמה למסך */
+    /* התאמה למסך – מכבדים padding אמיתי של viewport */
     const vpW = viewport.clientWidth;
     const vpH = viewport.clientHeight || window.innerHeight;
-    const innerW = Math.max(1, vpW - 2*FIT_MARGIN - ROOT_GUTTER); /* מפנים מקום לגוטר הימני */
-    const innerH = Math.max(1, vpH - PAD_TOP - PAD_BOTTOM);
-    const sFitW = innerW / Math.max(1, w);
-    const sFitH = innerH / Math.max(1, h);
-    const sFit  = Math.min(sFitW, sFitH);
+    const {pL,pR,pT,pB} = getViewportPads();
+
+    const innerW = Math.max(1, vpW - pL - pR);
+    const innerH = Math.max(1, vpH - pT - pB);
+    const sFitW  = innerW / Math.max(1, w);
+    const sFitH  = innerH / Math.max(1, h);
+    const sFit   = Math.min(sFitW, sFitH);
 
     if (mode === 'fit') { scale = Math.min(1, sFit); }
 
-    /* אופסט: צד שמאל = FIT_MARGIN, צד ימין = FIT_MARGIN + ROOT_GUTTER */
+    /* אופסטים לפי padding בפיקסלים שהומרו ליחידות מפה */
     const unit = Math.max(scale, 0.0001);
     if (mode === 'fit'){
-      const padL = FIT_MARGIN / unit;
-      const padR = (FIT_MARGIN + ROOT_GUTTER) / unit;
-      offsetX = -minX + padL;
-      stageW  = w + padL + padR;
+      const padLUnits = pL / unit;
+      const padRUnits = pR / unit;
+      offsetX = -minX + padLUnits;
+      stageW  = w + padLUnits + padRUnits;
     } else {
       const desiredPad = Math.max(60, Math.floor((vpW/scale - w)/2) + 40);
       offsetX = -minX + desiredPad;
@@ -483,8 +499,7 @@
     stage.style.opacity='1';
   }
 
-  /* ---------- Zoom & scroll ---------- */
-  let lastScaledW = 0, lastScaledH = 0;
+  function clampFree(v){ return Math.max(SCALE_MIN_FREE, Math.min(SCALE_MAX, v)); }
 
   function applyZoom(){
     const pct = document.getElementById('zoomPct');
@@ -495,7 +510,7 @@
     const scaledH = Math.ceil(contentH * scale) + PAD_TOP;
 
     if (mode === 'fit'){
-      /* אין גלילה – המפה נכנסת למסך; העיצוב מכבד את padding-inline-end */
+      /* ב-FIT אין גלילה, המפה ממורכזת על ידי Flex */
       scroller.style.width  = '100%';
       scroller.style.height = viewport.clientHeight + 'px';
       viewport.style.overflowX = 'hidden';
@@ -505,28 +520,29 @@
       return;
     }
 
-    /* ---- FREE: מרכוז אמיתי גם עם flex-pad ---- */
+    /* FREE: גלילה פעילה ושומרים מרכז */
     const scrollerW = Math.max(viewport.clientWidth,  scaledW + 2);
     const scrollerH = Math.max(viewport.clientHeight, scaledH + PAD_BOTTOM);
     scroller.style.width  = scrollerW + 'px';
     scroller.style.height = scrollerH + 'px';
 
-    const prevW = lastScaledW || scaledW;
-    const prevH = lastScaledH || scaledH;
-    let cxRatio = 0.5, cyRatio = 0.5;
-    if (prevW > 0 && prevH > 0){
-      const centerX = viewport.scrollLeft + viewport.clientWidth/2;
-      const centerY = viewport.scrollTop  + viewport.clientHeight/2;
-      const oldLeftPad = Math.max(0, (Math.max(viewport.clientWidth, prevW + 2) - prevW)/2);
-      cxRatio = (centerX - oldLeftPad) / prevW;
-      cyRatio = centerY / prevH;
-      cxRatio = Math.min(Math.max(cxRatio, 0), 1);
-      cyRatio = Math.min(Math.max(cyRatio, 0), 1);
-    }
+    let wantLeft, wantTop;
 
-    const leftFlexPad = Math.max(0, (scrollerW - scaledW)/2);
-    const wantLeft = Math.round(leftFlexPad + scaledW*cxRatio - viewport.clientWidth/2);
-    const wantTop  = Math.round(scaledH*cyRatio - viewport.clientHeight/2);
+    if (centerNext || !lastScaledW || !lastScaledH){
+      /* מרכז מוחלט */
+      const leftFlexPad = Math.max(0, (scrollerW - scaledW)/2);
+      wantLeft = Math.round(leftFlexPad + scaledW/2 - viewport.clientWidth/2);
+      wantTop  = Math.round(scaledH/2 - viewport.clientHeight/2);
+    } else {
+      /* שימור יחס מרכז קודם */
+      const oldLeftPad = Math.max(0, (Math.max(viewport.clientWidth, lastScaledW + 2) - lastScaledW)/2);
+      const cxRatio = (viewport.scrollLeft + viewport.clientWidth/2 - oldLeftPad) / lastScaledW;
+      const cyRatio = (viewport.scrollTop  + viewport.clientHeight/2) / lastScaledH;
+      const leftFlexPad = Math.max(0, (scrollerW - scaledW)/2);
+      wantLeft = Math.round(leftFlexPad + scaledW * cxRatio - viewport.clientWidth/2);
+      wantTop  = Math.round(scaledH * cyRatio - viewport.clientHeight/2);
+    }
+    centerNext = false;
 
     const maxLeft = Math.max(0, scrollerW - viewport.clientWidth);
     const maxTop  = Math.max(0, scrollerH - viewport.clientHeight);
@@ -541,12 +557,11 @@
   }
 
   function fitNow(){ mode='fit'; layout(); }
-  function clampFree(v){ return Math.max(SCALE_MIN_FREE, Math.min(SCALE_MAX, v)); }
   function zoomStep(mult){
     const wasFit = (mode==='fit');
     mode='free';
-    if (wasFit) pendingCenterContent = true;
-    scale = clampFree(scale * mult);
+    scale = clampFree(scale * mult);   /* זום מדורג (בלי קפיצות ל-110%) */
+    if (wasFit) centerNext = true;     /* מעבר מ-FIT ל-FREE – מרכז */
     applyZoom();
   }
 
@@ -608,17 +623,11 @@
   document.getElementById('fitBtn').addEventListener('click', fitNow);
   document.getElementById('zoomIn').addEventListener('click', ()=> zoomStep(ZOOM_STEP));
   document.getElementById('zoomOut').addEventListener('click', ()=> zoomStep(1/ZOOM_STEP));
-  document.getElementById('zoomPct').addEventListener('click', ()=>{ 
-    const wasFit = (mode==='fit');
-    mode='free';
-    if (wasFit) pendingCenterContent = true;
-    scale=1; 
-    applyZoom(); 
-  });
+  document.getElementById('zoomPct').addEventListener('click', ()=>{ mode='free'; centerNext=true; scale=1; applyZoom(); });
 
   document.getElementById('expandAll').addEventListener('click', ()=>{
     (function open(n){ n.collapsed=false; n.children.forEach(open); })(root);
-    fitNow();                       // הכול נכנס למסך
+    fitNow();
   });
   document.getElementById('collapseAll').addEventListener('click', ()=>{
     (function close(n){ if(n!==root) n.collapsed=true; n.children.forEach(close); })(root);
