--- a/map.html
+++ b/map.html
@@ -8,22 +8,22 @@
 <style>
   :root{
     /* ריווחים והתאמה */
-    --zoombar-gap: 60px;
-    --map-pad-top: 35px;
-    --map-pad-bottom: 48px;
-    --fit-margin: 28;              /* שוליים פנימיים ב-FIT מכל צד (פיקסלים) */
-    --root-gutter: 20px;           /* מרווח מינימום בין השורש לפס הגלילה (ימין) */
+    --zoombar-gap: 36px;
+    --map-pad-top: 32px;
+    --map-pad-bottom: 40px;
+    --fit-margin: 24;              /* שוליים ב-FIT מכל צד (פיקסלים) */
+    --root-gutter: 20px;           /* מרווח מינ' מהשורש לימין */
 
     /* גיאומטריה של המפה */
     --chip-h:48px;
     --gap-x:36px;
-    --gap-x-d01:100px;             /* רווח אופקי בין עומק 0 לעומק 1 */
-    --gap-rootcat:22px;            /* רווח אנכי בין ענפים בעומק 1 */
-    --gap-cat:22px;                /* עומק 2 */
-    --gap-d3:22px;                 /* עומק 3 */
-    --gap-d4:22px;                 /* עומק 4+ */
-    --gap-item:6px;                /* עלים */
-    --gap-between-groups:40px;     /* רווח נוסף בין ילדי השורש (מודולות) */
+    --gap-x-d01:100px;
+    --gap-rootcat:22px;
+    --gap-cat:22px;
+    --gap-d3:22px;
+    --gap-d4:22px;
+    --gap-item:6px;
+    --gap-between-groups:40px;
 
     /* עיצוב */
     --font:'Alef', system-ui, -apple-system, "Segoe UI", Arial, sans-serif;
@@ -32,7 +32,7 @@
     --shadow:0 8px 22px rgba(0,0,0,.10);
     --r:9999px;
 
-    --anim-dur:.60s;
+    --anim-dur:.55s;
     --anim-ease:ease-in-out;
   }
 
@@ -66,29 +66,32 @@
   /* במה + מרכוז */
   .viewport{
     position:relative; width:100%;
-    overflow:hidden;                 /* ב-FIT אין גלילה; ב-FREE תופעל בגלגול */
+    overflow:hidden;                 /* ב-FIT אין גלילה, ב-FREE תופעל גלילה */
     touch-action:none; cursor:grab;
     scrollbar-gutter:stable;         /* לא מוסיף גטר כפול */
     direction:ltr;                   /* נרמול scrollLeft */
-    padding-inline-end: var(--root-gutter); /* רווח קבוע לצד ימין */
   }
   .viewport.panning{ cursor:grabbing; }
+
   .scroller{
+    /* מרכז אופקי אמיתי – גם כשיש מקום עודף */
     position:relative;
-    display:flex; justify-content:center; align-items:flex-start; /* מרכז אופקי */
-    padding: var(--map-pad-top) 0 var(--map-pad-bottom);
+    display:flex; justify-content:center; align-items:flex-start;
+    padding:0;                       /* נגדיר דינאמי ב-JS */
     min-width:100%;
   }
+
   .stage{
     position:relative;
     min-height:380px; min-width:0;
     transform-origin: top center;    /* זום סביב המרכז האופקי */
     opacity:0;
   }
+
   .chips{ position:absolute; inset:0; z-index:1; direction:rtl; }
   svg{ position:absolute; inset:0; width:100%; height:100%; overflow:visible; z-index:0 }
 
-  /* קפסולות – מניעת קיטוע/אליפסות + שמירה מפני כיווץ ע״י flex */
+  /* קפסולות – לא נחתכות לעולם */
   .chip{
     position:absolute; display:inline-flex; align-items:center;
     height:var(--chip-h); padding:0 16px; border-radius:var(--r);
@@ -96,25 +99,13 @@
     direction:rtl; text-align:right; font-weight:700; gap:14px;
     background: var(--chip-bg, #ffffff); color:#0f172a; cursor:pointer;
 
-    overflow: visible !important;
-    text-overflow: clip !important;
-    max-width: none !important;
-    width: auto !important;
-    min-width: max-content;
+    overflow:visible !important; text-overflow:clip !important;
+    max-width:none !important; width:auto !important; min-width:max-content;
   }
   .chip[data-kind="root"]{font-weight:800}
-  .label{
-    pointer-events:none; direction:rtl; text-align:right;
-    overflow: visible !important;
-    text-overflow: clip !important;
-    white-space: nowrap !important;
-    max-width: none !important;
-    width: auto !important;
-    display:inline-block !important;
-    flex: 0 0 auto;
-  }
-  .chip .toggle{margin-inline-start:auto; flex:0 0 auto}
+  .label{ pointer-events:none; direction:rtl; text-align:right; white-space:nowrap !important; overflow:visible !important; }
 
+  .chip .toggle{margin-inline-start:auto; flex:0 0 auto}
   .toggle{position:relative; width:28px; height:28px; border:0; border-radius:50%; background:var(--toggle); cursor:pointer}
   .toggle .bar{position:absolute; left:50%; top:50%; width:14px; height:2px; background:#fff; border-radius:2px; transform:translate(-50%,-50%); transition:opacity var(--anim-dur) var(--anim-ease)}
   .toggle .bar.v{transform:translate(-50%,-50%) rotate(90deg)}
@@ -153,7 +144,7 @@
   </div>
 </div>
 
-<!-- === DATA === -->
+<!-- === DATA (אותו תוכן כמו בהודעה שלך) === -->
 <script id="mindmap-data" type="application/json">
 {
   "dir": "rtl",
@@ -277,12 +268,11 @@
   const edgeLayer = document.getElementById('edges');
 
   /* ---------- Zoom state ---------- */
-  let mode = 'fit';                 // 'fit' = הכל נכנס למסך ללא גלילה, 'free' = זום חופשי + גלילה
+  let mode = 'fit';                 // 'fit' = הכול במסך ללא גלילה, 'free' = זום חופשי
   let scale = 1;
-  const SCALE_MIN_FREE = 0.05;      // במצב FREE בלבד
+  const SCALE_MIN_FREE = 0.05;
   const SCALE_MAX      = 3.0;
-  const ZOOM_STEP      = 1.10;      // זום חלק – 10% לכל לחיצה
-  let pendingCenterContent = false; // מרכוז כשעוברים מ-FIT ל-FREE
+  const ZOOM_STEP      = 1.10;
 
   /* ---------- CSS ---------- */
   const CSS = getComputedStyle(document.documentElement);
@@ -343,11 +333,10 @@
   function measure(node){
     node.el.style.left = '-10000px';
     node.el.style.top  = '-10000px';
-    const w = Math.max(0, node.el.offsetWidth);  // רוחב הטקסט המלא
+    const w = Math.max(0, node.el.offsetWidth);
     node.width = node.naturalWidth = w;
     node.children.forEach(measure);
   }
-
   function gapForDepth(d){
     if(d>=4) return GAP_D4;
     if(d===3) return GAP_D3;
@@ -355,7 +344,6 @@
     if(d===1) return GAP_ROOTCAT;
     return GAP_CAT;
   }
-
   function subHeight(node){
     if(node.collapsed || node.children.length===0){ node._subH = node.height; return node._subH; }
     let total = 0;
@@ -367,10 +355,8 @@
     });
     node._subH = Math.max(node.height, total); return node._subH;
   }
-
   let DEPTH_ANCHORS = new Map();
   function xForDepth(depth){ return DEPTH_ANCHORS.get(depth) || 0; }
-
   function position(node, depth, top){
     node.x = xForDepth(depth);
     node.y = top + node._subH/2;
@@ -383,7 +369,6 @@
       });
     }
   }
-
   function collectVisible(n, arr){ arr.push(n); if(!n.collapsed) n.children.forEach(ch=>collectVisible(ch, arr)); }
   function bounds(nodes){
     let minX=Infinity,maxX=-Infinity,minY=Infinity,maxY=-Infinity;
@@ -407,7 +392,7 @@
 
     let vis=[]; collectVisible(root, vis);
 
-    /* עוגני עמודות לפי רוחב מקס' בכל עומק */
+    /* רוחב מקס' לעמודות */
     const depthMaxW = new Map();
     vis.forEach(n=>{ depthMaxW.set(n.depth, Math.max(depthMaxW.get(n.depth)||0, n.width||140)); });
     DEPTH_ANCHORS = new Map(); DEPTH_ANCHORS.set(0, 0);
@@ -427,7 +412,8 @@
     /* התאמה למסך */
     const vpW = viewport.clientWidth;
     const vpH = viewport.clientHeight || window.innerHeight;
-    const innerW = Math.max(1, vpW - 2*FIT_MARGIN - ROOT_GUTTER); /* מפנים מקום לגוטר הימני */
+
+    const innerW = Math.max(1, vpW - 2*FIT_MARGIN - ROOT_GUTTER);
     const innerH = Math.max(1, vpH - PAD_TOP - PAD_BOTTOM);
     const sFitW = innerW / Math.max(1, w);
     const sFitH = innerH / Math.max(1, h);
@@ -435,11 +421,11 @@
 
     if (mode === 'fit') { scale = Math.min(1, sFit); }
 
-    /* אופסט: צד שמאל = FIT_MARGIN, צד ימין = FIT_MARGIN + ROOT_GUTTER */
+    /* אופסט צדדי ביחידות-מפה */
     const unit = Math.max(scale, 0.0001);
     if (mode === 'fit'){
       const padL = FIT_MARGIN / unit;
-      const padR = (FIT_MARGIN + ROOT_GUTTER) / unit;
+      const padR = (FIT_MARGIN + ROOT_GUTTER) / unit;  /* יותר מימין */
       offsetX = -minX + padL;
       stageW  = w + padL + padR;
     } else {
@@ -479,12 +465,59 @@
       draw(ch);
     }); })(root);
 
-    applyZoom();
+    applyZoom();               // מרנדר זום + מרכז
     stage.style.opacity='1';
   }
 
-  /* ---------- Zoom & scroll ---------- */
+  /* ---------- Zoom & scroll (עם מרכוז אמיתי) ---------- */
   let lastScaledW = 0, lastScaledH = 0;
+
+  function centerViewportOnContent(scaledW, scaledH, padLeft, padRight, padTop, padBottom){
+    const vpW = viewport.clientWidth, vpH = viewport.clientHeight;
+
+    /* scroller – תמיד מספיק גדול כדי להכיל הכל, אך שומר מרכוז */
+    const paddedContentW = padLeft + scaledW + padRight;
+    const paddedContentH = padTop  + scaledH + padBottom;
+
+    const scW = Math.max(vpW, Math.ceil(paddedContentW));
+    const scH = Math.max(vpH, Math.ceil(paddedContentH));
+
+    scroller.style.padding = `${padTop}px ${padRight}px ${padBottom}px ${padLeft}px`;
+    scroller.style.width   = scW + 'px';
+    scroller.style.height  = scH + 'px';
+
+    /* כמה "פדינג גמיש" נוצר עקב center flex */
+    const flexLeft  = Math.max(0, (scW - paddedContentW)/2);
+    const flexTop   = Math.max(0, (scH - paddedContentH)/2);
+
+    /* שמירת מרכז יחסי קודמים (אם יש) */
+    let cxRatio = 0.5, cyRatio = 0.5;
+    if(lastScaledW>0 && lastScaledH>0){
+      const oldScW = Math.max(vpW, lastScaledW + parseFloat(scroller.style.paddingLeft||0) + parseFloat(scroller.style.paddingRight||0));
+      const oldFlexLeft = Math.max(0, (oldScW - (lastScaledW + parseFloat(scroller.style.paddingLeft||0) + parseFloat(scroller.style.paddingRight||0)))/2);
+      const centerX = viewport.scrollLeft + vpW/2;
+      const centerY = viewport.scrollTop  + vpH/2;
+      cxRatio = (centerX - oldFlexLeft - parseFloat(scroller.style.paddingLeft||0)) / Math.max(1,lastScaledW);
+      cyRatio = (centerY - 0 - parseFloat(scroller.style.paddingTop||0))    / Math.max(1,lastScaledH);
+      cxRatio = Math.min(Math.max(cxRatio, 0), 1);
+      cyRatio = Math.min(Math.max(cyRatio, 0), 1);
+    }
+
+    /* יעד גלילה חדש – מרכז המפה, ממורכז גם עם flex-pad */
+    const wantLeft = Math.round(flexLeft + padLeft + scaledW*cxRatio - vpW/2);
+    const wantTop  = Math.round(flexTop  + padTop  + scaledH*cyRatio - vpH/2);
+
+    const maxLeft = Math.max(0, scW - vpW);
+    const maxTop  = Math.max(0, scH - vpH);
+
+    viewport.style.overflowX = (maxLeft>0 && mode==='free') ? 'auto' : 'hidden';
+    viewport.style.overflowY = (maxTop >0 && mode==='free') ? 'auto' : 'hidden';
+
+    viewport.scrollLeft = Math.min(Math.max(0, wantLeft), maxLeft);
+    viewport.scrollTop  = Math.min(Math.max(0, wantTop ), maxTop );
+
+    lastScaledW = scaledW; lastScaledH = scaledH;
+  }
 
   function applyZoom(){
     const pct = document.getElementById('zoomPct');
@@ -492,60 +525,35 @@
     stage.style.transform = `scale(${scale})`;
 
     const scaledW = Math.ceil(stageW * scale);
-    const scaledH = Math.ceil(contentH * scale) + PAD_TOP;
+    const scaledH = Math.ceil(contentH * scale);
 
-    if (mode === 'fit'){
-      /* אין גלילה – המפה נכנסת למסך; העיצוב מכבד את padding-inline-end */
-      scroller.style.width  = '100%';
-      scroller.style.height = viewport.clientHeight + 'px';
-      viewport.style.overflowX = 'hidden';
-      viewport.style.overflowY = 'hidden';
-      viewport.scrollLeft = 0; viewport.scrollTop = 0;
-      lastScaledW = scaledW; lastScaledH = scaledH;
-      return;
+    /* פדינג בפועל */
+    let padLeft, padRight, padTop, padBottom;
+    if(mode==='fit'){
+      padLeft  = FIT_MARGIN;
+      padRight = FIT_MARGIN + ROOT_GUTTER; /* שומר 20px מינ' לימין */
+      padTop   = PAD_TOP;
+      padBottom= PAD_BOTTOM;
+    } else {
+      /* ב-FREE נשמור שוליים סימטריים + עדיין נוכל להבטיח 20px מימין */
+      const vpW = viewport.clientWidth, vpH = viewport.clientHeight;
+      const side = Math.max(40, Math.floor((vpW - scaledW)/2));
+      padLeft  = Math.max(20, side);
+      padRight = Math.max(20 + ROOT_GUTTER, side);
+      padTop   = Math.max(24, Math.floor((vpH - scaledH)/2));
+      padBottom= 32;
     }
 
-    /* ---- FREE: מרכוז אמיתי גם עם flex-pad ---- */
-    const scrollerW = Math.max(viewport.clientWidth,  scaledW + 2);
-    const scrollerH = Math.max(viewport.clientHeight, scaledH + PAD_BOTTOM);
-    scroller.style.width  = scrollerW + 'px';
-    scroller.style.height = scrollerH + 'px';
-
-    const prevW = lastScaledW || scaledW;
-    const prevH = lastScaledH || scaledH;
-    let cxRatio = 0.5, cyRatio = 0.5;
-    if (prevW > 0 && prevH > 0){
-      const centerX = viewport.scrollLeft + viewport.clientWidth/2;
-      const centerY = viewport.scrollTop  + viewport.clientHeight/2;
-      const oldLeftPad = Math.max(0, (Math.max(viewport.clientWidth, prevW + 2) - prevW)/2);
-      cxRatio = (centerX - oldLeftPad) / prevW;
-      cyRatio = centerY / prevH;
-      cxRatio = Math.min(Math.max(cxRatio, 0), 1);
-      cyRatio = Math.min(Math.max(cyRatio, 0), 1);
-    }
-
-    const leftFlexPad = Math.max(0, (scrollerW - scaledW)/2);
-    const wantLeft = Math.round(leftFlexPad + scaledW*cxRatio - viewport.clientWidth/2);
-    const wantTop  = Math.round(scaledH*cyRatio - viewport.clientHeight/2);
-
-    const maxLeft = Math.max(0, scrollerW - viewport.clientWidth);
-    const maxTop  = Math.max(0, scrollerH - viewport.clientHeight);
-
-    viewport.style.overflowX = (maxLeft > 0) ? 'auto' : 'hidden';
-    viewport.style.overflowY = (maxTop  > 0) ? 'auto' : 'hidden';
-
-    viewport.scrollLeft = Math.min(Math.max(0, wantLeft), maxLeft);
-    viewport.scrollTop  = Math.min(Math.max(0, wantTop),  maxTop);
-
-    lastScaledW = scaledW; lastScaledH = scaledH;
+    /* חשוב: המרכוז חייב לקרות אחרי שהדפדפן מדד מידות חדשות */
+    requestAnimationFrame(()=>requestAnimationFrame(()=>{
+      centerViewportOnContent(scaledW, scaledH, padLeft, padRight, padTop, padBottom);
+    }));
   }
 
   function fitNow(){ mode='fit'; layout(); }
   function clampFree(v){ return Math.max(SCALE_MIN_FREE, Math.min(SCALE_MAX, v)); }
   function zoomStep(mult){
-    const wasFit = (mode==='fit');
     mode='free';
-    if (wasFit) pendingCenterContent = true;
     scale = clampFree(scale * mult);
     applyZoom();
   }
@@ -563,8 +571,8 @@
   }
   function handleToggle(n){
     if(!n.children.length) return;
-    if(n.collapsed){ n.collapsed=false; if(n.el) n.el.setAttribute('aria-expanded','true'); layout(); }
-    else { if(n.el) n.el.setAttribute('aria-expanded','false'); animateClose(n, ()=>{ collapseDeep(n); layout(); }); }
+    n.collapsed ? (n.collapsed=false, n.el.setAttribute('aria-expanded','true'), layout())
+                : (n.el.setAttribute('aria-expanded','false'), animateClose(n, ()=>{ collapseDeep(n); layout(); }));
   }
 
   /* ---------- Drag-to-pan (FREE בלבד) ---------- */
@@ -596,7 +604,7 @@
   viewport.addEventListener('pointercancel', onUp, {passive:true});
   viewport.addEventListener('pointerleave', (e)=>{ if(isDown) onUp(e); }, {passive:true});
 
-  /* גלילה אופקית בעכבר/טראקפד במצב FREE */
+  /* גלילת עכבר אופקית/אנכית (FREE) */
   viewport.addEventListener('wheel', (e)=>{
     if (mode==='fit') return;
     if (e.shiftKey || Math.abs(e.deltaX) > Math.abs(e.deltaY)){
@@ -608,17 +616,11 @@
   document.getElementById('fitBtn').addEventListener('click', fitNow);
   document.getElementById('zoomIn').addEventListener('click', ()=> zoomStep(ZOOM_STEP));
   document.getElementById('zoomOut').addEventListener('click', ()=> zoomStep(1/ZOOM_STEP));
-  document.getElementById('zoomPct').addEventListener('click', ()=>{ 
-    const wasFit = (mode==='fit');
-    mode='free';
-    if (wasFit) pendingCenterContent = true;
-    scale=1; 
-    applyZoom(); 
-  });
+  document.getElementById('zoomPct').addEventListener('click', ()=>{ mode='free'; scale=1; applyZoom(); });
 
   document.getElementById('expandAll').addEventListener('click', ()=>{
     (function open(n){ n.collapsed=false; n.children.forEach(open); })(root);
-    fitNow();                       // הכול נכנס למסך
+    fitNow();
   });
   document.getElementById('collapseAll').addEventListener('click', ()=>{
     (function close(n){ if(n!==root) n.collapsed=true; n.children.forEach(close); })(root);
