Module02LTR.html

--- a/Module02LTR.html
+++ b/Module02LTR.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Philosophy – Mind-Map (Module 2 – LTR)</title>
+<title>Philosophical Foundations and Critique of Modernity – Mind-Map (Module 1 – LTR)</title>
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -31,7 +31,7 @@
     --r:9999px;
 
     /* Animation & fitting */
-    --anim-dur:.60s; 
+    --anim-dur:.60s;
     --anim-ease:ease-in-out;
     --fit-margin:32;
   }
@@ -39,7 +39,7 @@
   *{box-sizing:border-box}
   html, body, .chip, .zoombar, .zoombar button, .pct, .label { font-family: var(--font) !important; }
   html,body{height:auto;min-height:100%; overflow-x:hidden}
-  body{margin:0;background:var(--bg);color:var(--ink);} 
+  body{margin:0;background:var(--bg);color:var(--ink);}
   .wrap{padding:12px; width:100%; margin:0 auto; overflow:visible}
 
   /* Toolbar */
@@ -48,13 +48,13 @@
     display:flex; justify-content:center; align-items:center; gap:6px; z-index:3;
     background:rgba(255,255,255,.85); backdrop-filter:saturate(180%) blur(10px);
     padding:10px 12px; margin:0 auto var(--zoombar-gap);
-    width:max-content; border-radius:14px; 
+    width:max-content; border-radius:14px;
     border:1px solid rgba(15,23,42,.06); box-shadow:0 8px 24px rgba(0,0,0,.10)
   }
   .zoombar button{
-    border:1px solid rgba(15,23,42,.08); border-radius:12px; height:36px; padding:0 12px; font-weight:800; cursor:pointer; 
+    border:1px solid rgba(15,23,42,.08); border-radius:12px; height:36px; padding:0 12px; font-weight:800; cursor:pointer;
     background:linear-gradient(180deg,#ffffff,#f7f7f9); box-shadow:0 4px 12px rgba(0,0,0,.08);
-    display:inline-flex; align-items:center; justify-content:center; gap:8px; 
+    display:inline-flex; align-items:center; justify-content:center; gap:8px;
     transition:transform .12s ease, box-shadow .12s ease, background .12s ease;
     touch-action:manipulation;
   }
@@ -118,13 +118,13 @@
   </div>
 </div>
 
-<!-- === DATA: Module 2 – Philosophy === -->
+<!-- === DATA: Philosophical Foundations and Critique of Modernity === -->
 <script id="mindmap-data" type="application/json">
 {
   "dir": "ltr",
   "flow": "ltr",
   "root": {
-    "label": "Philosophy",
+    "label": "Philosophical Foundations and Critique of Modernity",
     "children": [
       {
         "label": "Lesson #01 – Philosophical Foundations in Jewish Thought",
@@ -149,7 +149,7 @@
       {
         "label": "Lesson #03 – From Universal Rationalism to Social Covenant: Rabbi Sacks’ Critique of the Enlightenment",
         "children": [
-          { "label": "The student will understand the concept of the ‘failure of the Enlightenment’ as a central turning point in Rabbi Sacks’ thought." },
+          { "label": "The student will understand the concept of the ‘failure of the Enlightenment’ as a central turning point in Rabbi Zaks’ thought." },
           { "label": "The student will analyze his critique of universal rationalism as alienating from the values of community, ethics, and covenant." },
           { "label": "The student will examine the idea of the Social Covenant as a Jewish alternative to modern humanism." },
           { "label": "The student will highlight the connection between the concepts of Responsibility, Hope, and Society as theological-ethical foundations." },
@@ -161,29 +161,29 @@
         "children": [
           { "label": "The student will become familiar with the four philosophical streams defined by Rabbi Sacks in his article An Agenda of Future Jewish Thought." },
           { "label": "The student will analyze his engagement with Rabbi Soloveitchik and the Lubavitcher Rebbe as a nexus combining rationalism and mysticism." },
-          { "label": "The student will understand the role of the concept of the common good in his social and ethical vision." },
-          { "label": "The student will discuss the tension between authority and autonomy through his interpretation of the Binding of Isaac and the word Hineni (Here I am)." },
-          { "label": "The student will examine the place of the Jewish voice in universal discourse and its contribution to the third sector – society and community." }
+          { "label": "The student will understand the role of the concept of the “common good” in his social and ethical vision." },
+          { "label": "The student will discuss the tension between authority and autonomy through his interpretation of the Binding of Isaac and the word “Hineni” (“Here I am”)." },
+          { "label": "The student will examine the place of the Jewish voice in universal discourse and its contribution to the “third sector” – society and community." }
         ]
       },
       {
-        "label": "Lesson #05 – Tradition in a Non-Traditional Era: Rabbi Sacks – Future, Covenant, and Choice",
+        "label": "Lesson #05 – Tradition in a Non-Traditional Era: Rabbi Sacks - Future, Covenant, and Choice",
         "children": [
           { "label": "The student will analyze Rabbi Sacks’ conception of the future as a moral and cultural call to the next generation." },
-          { "label": "The student will understand how the concept of the covenant extends into the realms of science, technology, and collective responsibility." },
+          { "label": "The student will understand how the concept of the ‘covenant’ extends into the realms of science, technology, and collective responsibility." },
           { "label": "The student will discuss the tension between existential anxiety and active hope in an era of global change." },
-          { "label": "The student will examine the principle of Choosing Life as a philosophical-theological guide for shaping a sustainable human future." },
-          { "label": "The student will identify Rabbi Sacks’ contribution to global ethical discourse as a voice that integrates faith, reason, and hope." }
+          { "label": "The student will examine the principle of ‘Choosing Life’ as a philosophical-theological guide for shaping a sustainable human future." },
+          { "label": "The student will identify Rabbi Zaks’ contribution to global ethical discourse as a voice that integrates faith, reason, and hope." }
         ]
       },
       {
         "label": "Lesson #06 – Rabbi Sacks: Without Fear – The Future as Challenge and Opportunity",
         "children": [
           { "label": "The student will analyze Rabbi Sacks’ TED talk as a philosophical-theological call for the post-Enlightenment era." },
-          { "label": "The student will identify the shift from I to We as a moral-social foundation in contemporary thought." },
-          { "label": "The student will understand the three dimensions of We – relationships, identity, and responsibility – as a basis for shared moral existence." },
-          { "label": "The student will discuss Rabbi Sacks’ proposal for renewing human solidarity through the reinforcement of covenantal values." },
-          { "label": "The student will examine the meaning of Without Fear as moral courage to face future challenges with faith and partnership." }
+          { "label": "The student will identify the shift from ‘I’ to ‘We’ as a moral-social foundation in contemporary thought." },
+          { "label": "The student will understand the three dimensions of ‘We’- relationships, identity, and responsibility—as a basis for shared moral existence." },
+          { "label": "The student will discuss Rabbi Zaks’ proposal for renewing human solidarity through the reinforcement of covenantal values." },
+          { "label": "The student will examine the meaning of ‘Without Fear” as moral courage to face future challenges with faith and partnership." }
         ]
       }
     ]
@@ -194,7 +194,7 @@
 <script>
 (function(){
   /* ----- Parse & setup ----- */
-  let data; 
+  let data;
   try{ data = JSON.parse(document.getElementById('mindmap-data').textContent); }
   catch(e){ console.error('Mindmap JSON parse error:', e); data = {"dir":"ltr","flow":"ltr","root":{"label":"Data error – check JSON","children":[]}}; }
 
@@ -225,7 +225,7 @@
   /* CSS constants */
   const CSS = getComputedStyle(document.documentElement);
   const CHIP_H  = parseFloat(CSS.getPropertyValue('--chip-h'))   || 48;
-  const GAP_X   = parseFloat(CSS.getPropertyValue('--gap-x'))    || 36; 
+  const GAP_X   = parseFloat(CSS.getPropertyValue('--gap-x'))    || 36;
   const GAP_ROOTCAT = parseFloat(CSS.getPropertyValue('--gap-rootcat')) || 22;
   const GAP_CAT = parseFloat(CSS.getPropertyValue('--gap-cat'))  || 22;
   const GAP_ITEM= parseFloat(CSS.getPropertyValue('--gap-item')) || 6;
@@ -241,7 +241,7 @@
 
   /* ----- Build tree ----- */
   function build(raw, depth=0, parent=null, idx=0){
-    const node = { 
+    const node = {
       label: raw.label, depth, parent, idx,
       collapsed: (typeof raw.collapsed==='boolean') ? raw.collapsed : (depth!==0),
       x:0,y:0,width:0,height:CHIP_H, el:null, id: Math.random().toString(36).slice(2),
@@ -400,7 +400,7 @@
       if(n.children.length){ n.el.setAttribute('aria-expanded', String(!n.collapsed)); }
     });
 
-    /* edges – LTR: parent right → child left */
+    /* edges – FIXED for LTR: parent right → child left */
     edgeLayer.textContent='';
     (function draw(n){ if(n.collapsed) return; n.children.forEach(ch=>{
       const PAD_PARENT=6, PAD_CHILD=6;
@@ -424,8 +424,8 @@
       }
 
       const path = document.createElementNS('http://www.w3.org/2000/svg','path');
-      const dx=Math.abs(p2x-p1x)*.45, 
-            c1x=(FLOW==='rtl'? p1x-dx: p1x+dx), 
+      const dx=Math.abs(p2x-p1x)*.45,
+            c1x=(FLOW==='rtl'? p1x-dx: p1x+dx),
             c2x=(FLOW==='rtl'? p2x+dx: p2x-dx);
       path.setAttribute('class','edge');
       path.setAttribute('d', `M ${p1x} ${p1y} C ${c1x} ${p1y}, ${c2x} ${p2y}, ${p2x} ${p2y}`);
@@ -448,7 +448,7 @@
     });
     setTimeout(done, dur);
   }
-  function handleToggle(n){ 
+  function handleToggle(n){
     if(!n.children.length) return;
     if(n.collapsed){ n.collapsed=false; if(n.el) n.el.setAttribute('aria-expanded','true'); layout(); }
     else { if(n.el) n.el.setAttribute('aria-expanded','false'); animateClose(n, ()=>{ collapseDeep(n); layout(); }); }
@@ -523,8 +523,7 @@
     isDown = false;
     if(isPanning){
       viewport.classList.remove('panning');
-      try{ viewport.releasePointerCapture?.(activePointerId); }catch(_){}
-    }
+      try{ viewport.releasePointerCapture?.(activePointerId); }catch(_){}}
     isPanning = false; activePointerId = null; movedPx = 0;
   }
   viewport.addEventListener('pointerdown', onPointerDown, {passive:true});
@@ -549,7 +548,7 @@
     viewport.style.height = Math.max(320, Math.floor(avail)) + 'px';
   }
 
-  sizeViewport(); 
+  sizeViewport();
   layout();
 
   if (document.fonts && document.fonts.ready) {
