Update label from 'Philosophy & Leadership' to 'Science, Modernity, and Leadership'

--- a/Module05LTR.html
+++ b/Module05LTR.html
@@ -129,7 +129,7 @@
   "dir": "ltr",
   "flow": "ltr",
   "root": {
-    "label": "Philosophy & Leadership",
+    "label": "Science, Modernity, and Leadership",
     "children": [
       {
         "label": "Lesson #01 – Between Tradition and Modernity",
