Update title and comments in Module01LTR.html

--- a/Module01LTR.html
+++ b/Module01LTR.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Biography – Mind-Map (Module 1 – LTR)</title>
+<title>Biography and Values – Mind-Map (Module 1 – LTR)</title>
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -118,13 +118,13 @@
   </div>
 </div>
 
-<!-- === DATA: Module 1 – Biography === -->
+<!-- === DATA: Module 1 – Biography and Values === -->
 <script id="mindmap-data" type="application/json">
 {
   "dir": "ltr",
   "flow": "ltr",
   "root": {
-    "label": "Biography",
+    "label": "Biography and Values",
     "children": [
       {
         "label": "Lesson #01 - Biographical Foundations in the Thought of Rabbi Sacks",
