Update title and comments for Module02LTR.html

--- a/Module02LTR.html
+++ b/Module02LTR.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Philosophical Foundations and Critique of Modernity – Mind-Map (Module 1 – LTR)</title>
+<title>Philosophical Foundations – Mind-Map (Module 1 – LTR)</title>
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -118,13 +118,13 @@
   </div>
 </div>
 
-<!-- === DATA: Philosophical Foundations and Critique of Modernity === -->
+<!-- === DATA: Philosophical Foundations === -->
 <script id="mindmap-data" type="application/json">
 {
   "dir": "ltr",
   "flow": "ltr",
   "root": {
-    "label": "Philosophical Foundations and Critique of Modernity",
+    "label": "Philosophical Foundations",
     "children": [
       {
         "label": "Lesson #01 – Philosophical Foundations in Jewish Thought",
