--- a/Module03LTR.html
+++ b/Module03LTR.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Interpretation – Mind-Map (Module 1 – LTR)</title>
+<title>Interpretive Method – Mind-Map (Module 1 – LTR)</title>
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -118,13 +118,13 @@
   </div>
 </div>
 
-<!-- === DATA: Interpretation Module === -->
+<!-- === DATA: Interpretive Method Module === -->
 <script id="mindmap-data" type="application/json">
 {
   "dir": "ltr",
   "flow": "ltr",
   "root": {
-    "label": "Interpretation",
+    "label": "Interpretive Method",
     "children": [
       {
         "label": "Lesson #01 – The Interpretive Method in the Philosophy of Rabbi Sacks",
