Update title and comments in Module04LTR.html

--- a/Module04LTR.html
+++ b/Module04LTR.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Dialogue – Mind-Map (Module 1 – LTR)</title>
+<title>From Text to Dialogue – Mind-Map (Module 1 – LTR)</title>
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -118,13 +118,13 @@
   </div>
 </div>
 
-<!-- === DATA: Dialogue Module === -->
+<!-- === DATA: From Text to Dialogue Module === -->
 <script id="mindmap-data" type="application/json">
 {
   "dir": "ltr",
   "flow": "ltr",
   "root": {
-    "label": "Dialogue",
+    "label": "From Text to Dialogue",
     "children": [
       {
         "label": "Lesson #01 – Dialogue in a Diverse Society in a Multicultural Age",
