Update title and comments in Module05LTR.html

--- a/Module05LTR.html
+++ b/Module05LTR.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Philosophy & Leadership – Mind-Map</title>
+<title>Science, Modernity, and Leadership – Mind-Map</title>
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -123,7 +123,7 @@
   </div>
 </div>
 
-<!-- === DATA: Module Content === -->
+<!-- === DATA: Science, Modernity, and Leadership Module === -->
 <script id="mindmap-data" type="application/json">
 {
   "dir": "ltr",
